# hive-client

./: .env.example  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: build.yml  nightly.yml
infrastructure/state/: main.tf
infrastructure/tests/: local.config  main.tf  outputs.tf  variables.tf
infrastructure/tests/cognito/: main.tf  outputs.tf  variables.tf
src/: constants.rs  lib.rs
src/client/: mod.rs
src/client/api/: actions.rs  devices.rs  error.rs  mod.rs  products.rs  weather.rs
src/client/authentication/: confirm_device.rs  error.rs  login.rs  logout.rs  mod.rs  refresh.rs  user.rs
src/client/authentication/challenge/: device_password_verifier.rs  device_srp_auth.rs  mod.rs  password_verifier.rs  sms_mfa.rs
src/client/wrapper/: action.rs  authentication.rs  device.rs  mod.rs  product.rs  weather.rs
src/helper/: url.rs
tests/: hive_checks.rs
