[package]
name = "hive-client"
version = "0.0.6"
authors = ["Ryan Maber <ryan@ryanmaber.com>"]
license = "MIT"
description = "A Rust client for interfacing with Hive smart home systems."
keywords = ["hive", "smart-home", "home-automation", "client", "hive-home"]
categories = ["api-bindings"]
edition = "2024"
rust-version = "1.88.0"
readme = "README.md"

homepage = "https://ryanmaber.com"
repository = "https://github.com/ryanmab/hive-client"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
aws-config = "1.6.1"
aws-sdk-cognitoidentityprovider = "1.76.0"
tokio = { version = "1.52.1", features = ["test-util", "macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
thiserror = "2.0.12"
reqwest = { version = "0.13.3", features = ["json", "query"] }
log = { version = "0.4.27", features = ["kv"] }
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.149"
serde_with = "3.18.0"
aws-cognito-srp = "0.2"

[dev-dependencies]
tokio-test = "0.4.5"
dotenvy_macro = "0.15.7"
